--- a/index.html
+++ b/index.html
@@ -5,6 +5,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Zeno Sama - Selector Multiverso</title>
     <script src="https://cdn.tailwindcss.com"></script>
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link href="https://fonts.googleapis.com/css2?family=Russo+One&family=Teko:wght@400;600&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="styles.css">
 </head>
 <body class="bg-black overflow-hidden m-0">
@@ -19,7 +21,18 @@
     
     <button id="back-btn" class="hidden">VOLVER AL MULTIVERSO</button>
 
-    <div id="hover-tooltip" class="opacity-0 pointer-events-none absolute text-white font-bold text-2xl uppercase tracking-widest transition-opacity duration-300 z-40 tooltip-glow">
+    <div id="hover-tooltip" class="opacity-0 pointer-events-none absolute text-white font-bold text-2xl uppercase tracking-widest transition-opacity duration-300 z-40 tooltip-glow"></div>
+
+    <div id="left-zone" class="hidden pointer-events-none absolute top-0 left-0 h-screen w-[40vw] flex flex-col items-center justify-start pt-[12vh] z-40">
+        <h2 id="floating-title" class="font-['Russo_One'] text-6xl text-white uppercase drop-shadow-[0_0_20px_rgba(255,255,255,0.5)] transition-all duration-500">
+            UNIVERSO <span class="text-[#ff9900] drop-shadow-[0_0_20px_#ff9900]">X</span>
+        </h2>
+    </div>
+
+    <div id="roster-panel" class="roster-hidden">
+        <div id="roster-loader" class="text-yellow-500 animate-pulse text-xl text-center mt-10">Escaneando niveles de poder...</div>
+        <div class="roster-grid" id="roster-grid">
+            </div>
     </div>
 
     <div id="canvas-container"></div>
@@ -32,7 +45,6 @@
             }
         }
     </script>
-
     <script type="module" src="./src/main.js"></script>
 </body>
 </html>
